# KTIMAZ-REV

./: LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android-build.yml  main.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/astaide/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/imtiaz/ktimazrev/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: arm_disassembler.h  elf_parser.h  utils.h
app/src/main/cpp/src/: arm_disassembler.cpp  elf_parser.cpp  native_lib.cpp  utils.cpp
app/src/main/java/com/imtiaz/ktimazrev/: MainActivity.kt
app/src/main/java/com/imtiaz/ktimazrev/model/: Bookmark.kt  Instruction.kt  Symbol.kt
app/src/main/java/com/imtiaz/ktimazrev/ui/: Bookmarks.kt  DisassemblyView.kt  GraphCanvas.kt  HexViewer.kt  SearchBar.kt  SectionSelector.kt  Symbols.kt
app/src/main/java/com/imtiaz/ktimazrev/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/imtiaz/ktimazrev/utils/: FilePicker.kt  ThreadPool.kt
app/src/main/java/com/imtiaz/ktimazrev/viewmodel/: DisassemblyViewModel.kt  FileLoaderViewModel.kt
app/src/main/java/com/imtiaz/ktimazstudio/: MainActivity.kt
app/src/main/java/com/imtiaz/ktimazstudio/model/: Bookmark.kt  Instruction.kt  Symbol.kt
app/src/main/java/com/imtiaz/ktimazstudio/ui/: Bookmarks.kt  DisassemblyView.kt  GraphCanvas.kt  HexViewer.kt  SearchBar.kt  SectionSelector.kt  Symbols.kt
app/src/main/java/com/imtiaz/ktimazstudio/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/imtiaz/ktimazstudio/utils/: FilePicker.kt  ThreadPool.kt
app/src/main/java/com/imtiaz/ktimazstudio/viewmodel/: DisassemblyViewModel.kt  FileLoaderViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml
app/src/test/java/com/example/astaide/: ExampleUnitTest.kt
app/src/test/java/com/imtiaz/ktimazrev/: ExampleUnitTest.kt
gradle/: libs.versions.toml  libs.versions.toml.bak
gradle/wrapper/: gradle-wrapper.properties
